--- a/springboot03web/src/main/resources/templates/index.html
+++ b/springboot03web/src/main/resources/templates/index.html
@@ -83,22 +83,22 @@
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('统计页面','welcome1.html')">
+                                <a onclick="xadmin.add_tab('统计页面','welcome1')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>统计页面</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('会员列表(静态表格)','member-list.html')">
+                                <a onclick="xadmin.add_tab('会员列表(静态表格)','memberlist')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>会员列表(静态表格)</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('会员列表(动态表格)','member-list1.html',true)">
+                                <a onclick="xadmin.add_tab('会员列表(动态表格)','memberlist1',true)">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>会员列表(动态表格)</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('会员删除','member-del.html')">
+                                <a onclick="xadmin.add_tab('会员删除','member-del')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>会员删除</cite></a>
                             </li>
@@ -109,12 +109,12 @@
                                     <i class="iconfont nav_right">&#xe697;</i></a>
                                 <ul class="sub-menu">
                                     <li>
-                                        <a onclick="xadmin.add_tab('会员删除','member-del.html')">
+                                        <a onclick="xadmin.add_tab('会员删除','member-del')">
                                             <i class="iconfont">&#xe6a7;</i>
                                             <cite>会员删除</cite></a>
                                     </li>
                                     <li>
-                                        <a onclick="xadmin.add_tab('等级管理','member-list1.html')">
+                                        <a onclick="xadmin.add_tab('等级管理','member-list1 ')">
                                             <i class="iconfont">&#xe6a7;</i>
                                             <cite>等级管理</cite></a>
                                     </li>
