--- a/springboot03web/src/main/resources/templates/login.html
+++ b/springboot03web/src/main/resources/templates/login.html
@@ -24,8 +24,8 @@
     <h1 class="h3 mb-3 font-weight-normal" th:text="#{login.tip}">请登录</h1>
     <!-- 如果msg为空，不显示 -->
     <p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
-    <input type="text" name="username" class="form-control" th:placeholder="#{login.name}" required="" autofocus="">
-    <input type="password" name="password" class="form-control" th:placeholder="#{login.password}" required="">
+    <input type="text" name="username" class="form-control" th:placeholder="#{login.name}" value="牧户仲寻" required="" autofocus="">
+    <input type="password" name="password" class="form-control" th:placeholder="#{login.password}" value="123" required="">
     <div class="checkbox mb-3">
         <label>
             <input type="checkbox" value="remember-me">[[#{login.remember}]]
