--- a/springboot03web/src/main/resources/templates/welcome.html
+++ b/springboot03web/src/main/resources/templates/welcome.html
@@ -23,7 +23,7 @@
                     <div class="layui-card">
                         <div class="layui-card-body ">
                             <blockquote class="layui-elem-quote">欢迎管理员：
-                                <span class="x-red">[[${session.loginUser}]]</span>！当前时间:[[${nowdate}]]
+                                <span class="x-red">[[${session.loginUser}]]</span>！当前时间:
                             </blockquote>
                         </div>
                     </div>
