开始编辑会员信息

--- a/springboot03web/src/main/resources/templates/index.html
+++ b/springboot03web/src/main/resources/templates/index.html
@@ -98,7 +98,7 @@
                                     <cite>会员列表(动态表格)</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('会员删除','member-del')">
+                                <a onclick="xadmin.add_tab('会员删除','memberdel')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>会员删除</cite></a>
                             </li>
@@ -109,7 +109,7 @@
                                     <i class="iconfont nav_right">&#xe697;</i></a>
                                 <ul class="sub-menu">
                                     <li>
-                                        <a onclick="xadmin.add_tab('会员删除','member-del')">
+                                        <a onclick="xadmin.add_tab('会员删除','memberdel')">
                                             <i class="iconfont">&#xe6a7;</i>
                                             <cite>会员删除</cite></a>
                                     </li>
