--- a/springboot03web/src/main/resources/templates/member/member-edit.html
+++ b/springboot03web/src/main/resources/templates/member/member-edit.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html class="x-admin-sm" lang="en" xmlns:th="http://www.thymeleaf.org">
-
+<html class="x-admin-sm"  lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <title>欢迎页面-X-admin2.2</title>
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-        <link rel="stylesheet" th:href="@{/css/font.css}">
-        <link rel="stylesheet" th:href="@{/css/xadmin.css}">
-        <script type="text/javascript" th:src="@{/lib/layui/layui.js}" charset="utf-8"></script>
-        <script type="text/javascript" th:src="@{/js/xadmin.js}"></script>
+        <link rel="stylesheet" href="./css/font.css">
+        <link rel="stylesheet" href="./css/xadmin.css">
+        <script type="text/javascript" src="./lib/layui/layui.js" charset="utf-8"></script>
+        <script type="text/javascript" src="./js/xadmin.js"></script>
         <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
         <!--[if lt IE 9]>
             <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
             <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-    </head>
+        <![endif]--></head>
+
     <body>
         <div class="layui-fluid">
             <div class="layui-row">
@@ -25,27 +24,26 @@
                         <label for="L_email" class="layui-form-label">
                             <span class="x-red">*</span>邮箱</label>
                         <div class="layui-input-inline">
-                            <input type="text" id="L_email" name="email" value="87452163@qq.com" placeholder="987452163@qq.com" required="" lay-verify="email" autocomplete="off" class="layui-input"></div>
-
+                            <input type="text" id="L_email" name="email" required="" lay-verify="email" autocomplete="off" class="layui-input"></div>
                         <div class="layui-form-mid layui-word-aux">
                             <span class="x-red">*</span>将会成为您唯一的登入名</div></div>
                     <div class="layui-form-item">
                         <label for="L_username" class="layui-form-label">
                             <span class="x-red">*</span>昵称</label>
                         <div class="layui-input-inline">
-                            <input type="text" id="L_username" name="name" value="小肖asd" placeholder="小肖" required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
+                            <input type="text" id="L_username" name="username" required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
                     </div>
                     <div class="layui-form-item">
                         <label for="L_pass" class="layui-form-label">
                             <span class="x-red">*</span>密码</label>
                         <div class="layui-input-inline">
-                            <input type="password" id="L_pass" name="password" value="asdasd" required="" lay-verify="pass" autocomplete="off" class="layui-input"></div>
+                            <input type="password" id="L_pass" name="pass" required="" lay-verify="pass" autocomplete="off" class="layui-input"></div>
                         <div class="layui-form-mid layui-word-aux">6到16个字符</div></div>
                     <div class="layui-form-item">
                         <label for="L_repass" class="layui-form-label">
                             <span class="x-red">*</span>确认密码</label>
                         <div class="layui-input-inline">
-                            <input type="password" id="L_repass" name="repass" value="asdasd" required="" lay-verify="repass" autocomplete="off" class="layui-input"></div>
+                            <input type="password" id="L_repass" name="repass" required="" lay-verify="repass" autocomplete="off" class="layui-input"></div>
                     </div>
                     <div class="layui-form-item">
                         <label for="L_repass" class="layui-form-label"></label>
@@ -53,7 +51,7 @@
                 </form>
             </div>
         </div>
-        <script>layui.use(['form', 'layer','jquery'],
+        <script>layui.use(['form', 'layer'],
             function() {
                 $ = layui.jquery;
                 var form = layui.form,
@@ -73,27 +71,31 @@
                         }
                     }
                 });
+
                 //监听提交
                 form.on('submit(add)',
-                function() {
-                    //模拟post请求，添加会员信息
-                    $.post('http://localhost:8080/memberadd',{name:$('#L_username').val(),password:$('#L_pass').val(),email:$('#L_email').val()}).then(function (data) {
-                        console.log(data);
-                        layer.alert(data, {
-                            icon: 6
-                        },
-                            function() {
-                                //关闭当前frame
-                                xadmin.close();
-                                // 可以对父窗口进行刷新
-                                xadmin.father_reload();
-                            });
-
+                function(data) {
+                    console.log(data);
+                    //发异步，把数据提交给php
+                    layer.alert("增加成功", {
+                        icon: 6
+                    },
+                    function() {
+                        // 获得frame索引
+                        var index = parent.layer.getFrameIndex(window.name);
+                        //关闭当前frame
+                        parent.layer.close(index);
                     });
-                    //阻止触发form表单提交的操作
                     return false;
-                    })
+                });
+
             });</script>
+<!--        <script>var _hmt = _hmt || []; (function() {
+                var hm = document.createElement("script");
+                hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();</script>-->
     </body>
 
 </html>
