--- a/springboot03web/src/main/resources/templates/login.html
+++ b/springboot03web/src/main/resources/templates/login.html
@@ -33,9 +33,9 @@
     </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit">[[#{login.sumbit}]]</button>
     <p class="mt-5 mb-3 text-muted">© <span>2021</span>-<span>2022</span></p>
-    <a class="btn btn-sm" th:href="@{/login?(l=zh_CN)}">中文</a>
-    <a class="btn btn-sm" th:href="@{/login?(l=en_US)}">English</a>
-    <a class="btn btn-sm" th:href="@{/login?(l=ja_JP)}">日本語</a>
+    <a class="btn btn-sm" th:href="@{/login.html?(l=zh_CN)}">中文</a>
+    <a class="btn btn-sm" th:href="@{/login.html?(l=en_US)}">English</a>
+    <a class="btn btn-sm" th:href="@{/login.html?(l=ja_JP)}">日本語</a>
 </form>
 </body>
 </html>
