--- a/springboot03web/src/main/resources/templates/member/member-add.html
+++ b/springboot03web/src/main/resources/templates/member/member-add.html
@@ -35,12 +35,27 @@
                             <input type="text" id="L_username" name="name" value="小肖asd" placeholder="小肖" required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
                     </div>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">身份</label>
+                        <label class="layui-form-label">
+                            <span class="x-red">*</span>身份</label>
                         <div class="layui-input-inline">
-                            <select name="role" id="L-role" lay-filter="shenfen">
+                            <select name="role" id="L_role" lay-filter="shenfen">
                                 <option th:each="role:${roles}" th:text="${role.getIdentity()}" th:value="${role.getNo()}"></option>
                             </select>
                         </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">性别</label>
+                        <div class="layui-input-block">
+                            <input type="radio" name="sex" value="1" title="男" checked="">
+                            <input type="radio" name="sex" value="0" title="女">
+                            <input type="radio" name="sex" value="-1" title="禁用" disabled="">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label for="L_phone" class="layui-form-label">
+                            </span>手机号</label>
+                        <div class="layui-input-inline">
+                            <input type="text" id="L_phone" name="phone" value="13718562498" required=""  autocomplete="off" class="layui-input"></div>
                     </div>
                     <div class="layui-form-item">
                         <label for="L_pass" class="layui-form-label">
@@ -55,7 +70,7 @@
                             <input type="password" id="L_repass" name="repass" value="asdasd" required="" lay-verify="repass" autocomplete="off" class="layui-input"></div>
                     </div>
                     <div class="layui-form-item">
-                        <label for="L_repass" class="layui-form-label"></label>
+                        <label class="layui-form-label"></label>
                         <button class="layui-btn" lay-filter="add" lay-submit="">增加</button></div>
                 </form>
             </div>
@@ -69,8 +84,8 @@
                 //自定义验证规则
                 form.verify({
                     nikename: function(value) {
-                        if (value.length < 5) {
-                            return '昵称至少得5个字符啊';
+                        if (value.length == 0) {
+                            return '昵称还未填写啊喂！';
                         }
                     },
                     pass: [/(.+){6,12}$/, '密码必须6到12位'],
@@ -84,7 +99,15 @@
                 form.on('submit(add)',
                 function() {
                     //模拟post请求，添加会员信息
-                    $.post('http://localhost:8080/memberadd',{name:$('#L_username').val(),role:$('#L-role').val(),password:$('#L_pass').val(),email:$('#L_email').val()}).then(function (data) {
+                    $.post('http://localhost:8080/memberadd',{
+                        email:$('#L_email').val(),
+                        name:$('#L_username').val(),
+                        role:$('#L_role').val(),
+                        phone:$('#L_phone').val(),
+                        gender:document.getElementsByName("sex")[0].checked?1:0,
+                        password:$('#L_pass').val(),
+
+                    }).then(function (data) {
                         console.log(data);
                         layer.alert(data, {
                             icon: 6
