--- a/springboot03web/src/main/resources/templates/member/member-edit.html
+++ b/springboot03web/src/main/resources/templates/member/member-edit.html
@@ -6,10 +6,10 @@
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-        <link rel="stylesheet" href="./css/font.css">
-        <link rel="stylesheet" href="./css/xadmin.css">
-        <script type="text/javascript" src="./lib/layui/layui.js" charset="utf-8"></script>
-        <script type="text/javascript" src="./js/xadmin.js"></script>
+        <link rel="stylesheet" th:href="@{/css/font.css}">
+        <link rel="stylesheet" th:href="@{/css/xadmin.css}">
+        <script type="text/javascript" th:src="@{/lib/layui/layui.js}" charset="utf-8"></script>
+        <script type="text/javascript" th:src="@{/js/xadmin.js}"></script>
         <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
         <!--[if lt IE 9]>
             <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -20,33 +20,39 @@
         <div class="layui-fluid">
             <div class="layui-row">
                 <form class="layui-form">
+                    <!-- member对象id的隐藏域 -->
+                    <input id="L_id" type="hidden" name="id" th:value="${member.getId()}">
+
                     <div class="layui-form-item">
                         <label for="L_email" class="layui-form-label">
                             <span class="x-red">*</span>邮箱</label>
                         <div class="layui-input-inline">
-                            <input type="text" id="L_email" name="email" required="" lay-verify="email" autocomplete="off" class="layui-input"></div>
+                            <input th:value="${member.getEmail()}" type="text" id="L_email" name="email" required="" lay-verify="email" autocomplete="off" class="layui-input" readonly></div>
                         <div class="layui-form-mid layui-word-aux">
                             <span class="x-red">*</span>将会成为您唯一的登入名</div></div>
                     <div class="layui-form-item">
                         <label for="L_username" class="layui-form-label">
                             <span class="x-red">*</span>昵称</label>
                         <div class="layui-input-inline">
-                            <input type="text" id="L_username" name="username" required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
+                            <input th:value="${member.getName()}" type="text" id="L_username" name="name"  required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
                     </div>
                     <div class="layui-form-item">
-                        <label for="L_pass" class="layui-form-label">
-                            <span class="x-red">*</span>密码</label>
+                        <label class="layui-form-label">
+                            <span class="x-red">*</span>身份</label>
                         <div class="layui-input-inline">
-                            <input type="password" id="L_pass" name="pass" required="" lay-verify="pass" autocomplete="off" class="layui-input"></div>
-                        <div class="layui-form-mid layui-word-aux">6到16个字符</div></div>
-                    <div class="layui-form-item">
-                        <label for="L_repass" class="layui-form-label">
-                            <span class="x-red">*</span>确认密码</label>
-                        <div class="layui-input-inline">
-                            <input type="password" id="L_repass" name="repass" required="" lay-verify="repass" autocomplete="off" class="layui-input"></div>
+                            <select name="role" id="L-role" lay-filter="shenfen">
+                                <option th:selected="${member.getRole()==role.getNo()}" th:each="role:${roles}" th:text="${role.getIdentity()}" th:value="${role.getNo()}"></option>
+                            </select>
+                        </div>
                     </div>
                     <div class="layui-form-item">
-                        <label for="L_repass" class="layui-form-label"></label>
+                        <label for="L_phone" class="layui-form-label">
+                            </span>手机号</label>
+                        <div class="layui-input-inline">
+                            <input th:value="${member.getPhone()}" type="text" id="L_phone" name="phone"  required=""  autocomplete="off" class="layui-input"></div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label"></label>
                         <button class="layui-btn" lay-filter="add" lay-submit="">增加</button></div>
                 </form>
             </div>
@@ -60,32 +66,44 @@
                 //自定义验证规则
                 form.verify({
                     nikename: function(value) {
-                        if (value.length < 5) {
-                            return '昵称至少得5个字符啊';
+                        if (value.length == 0) {
+                            return '昵称未填写';
                         }
                     },
-                    pass: [/(.+){6,12}$/, '密码必须6到12位'],
+/*                    pass: [/(.+){6,12}$/, '密码必须6到12位'],
                     repass: function(value) {
                         if ($('#L_pass').val() != $('#L_repass').val()) {
                             return '两次密码不一致';
                         }
-                    }
+                    }*/
                 });
 
                 //监听提交
                 form.on('submit(add)',
-                function(data) {
-                    console.log(data);
+                function() {
                     //发异步，把数据提交给php
-                    layer.alert("增加成功", {
-                        icon: 6
+                    //模拟post请求，添加会员信息
+                    $.post('http://localhost:8080/memberupdata',{
+                        id:$('#L_id').val(),
+                        email:$('#L_email').val(),
+                        name:$('#L_username').val(),
+                        role:$('#L-role').val(),
+                        phone:$('#L_phone').val()
+                    }).then(function (data) {
+                        console.log(data);
+                        var number = (data == '修改成功！')?6:5
+
+                    layer.alert(data, {
+                        icon: number
                     },
                     function() {
                         // 获得frame索引
                         var index = parent.layer.getFrameIndex(window.name);
                         //关闭当前frame
                         parent.layer.close(index);
+                        xadmin.father_reload();
                     });
+                    })
                     return false;
                 });
 
