--- a/springboot03web/src/main/resources/templates/member/member-password.html
+++ b/springboot03web/src/main/resources/templates/member/member-password.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
-<html class="x-admin-sm">
+<html class="x-admin-sm" lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <title>欢迎页面-X-admin2.2</title>
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-        <link rel="stylesheet" href="./css/font.css">
-        <link rel="stylesheet" href="./css/xadmin.css">
-        <script type="text/javascript" src="./lib/layui/layui.js" charset="utf-8"></script>
-        <script type="text/javascript" src="./js/xadmin.js"></script>
+        <link rel="stylesheet" th:href="@{/css/font.css}">
+        <link rel="stylesheet" th:href="@{/css/xadmin.css}">
+        <script type="text/javascript" th:src="@{/lib/layui/layui.js}" charset="utf-8"></script>
+        <script type="text/javascript" th:src="@{/js/xadmin.js}"></script>
         <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
         <!--[if lt IE 9]>
             <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
             <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
         <![endif]--></head>
-    
+
     <body>
         <div class="layui-fluid">
             <div class="layui-row">
                 <form class="layui-form">
+                    <!-- member对象id的隐藏域 -->
+                    <input id="L_id" type="hidden" name="id" th:value="${member.getId()}">
+
                     <div class="layui-form-item">
-                        <label for="L_username" class="layui-form-label">昵称</label>
+                        <label for="L_name" class="layui-form-label">昵称</label>
                         <div class="layui-input-inline">
-                            <input type="text" id="L_username" name="username" disabled="" value="小明" class="layui-input"></div>
+                            <input type="text" id="L_name" name="username" disabled="" value="小明" class="layui-input"></div>
                     </div>
                     <div class="layui-form-item">
-                        <label for="L_repass" class="layui-form-label">
+                        <label for="L_oldpass" class="layui-form-label">
                             <span class="x-red">*</span>旧密码</label>
                         <div class="layui-input-inline">
-                            <input type="password" id="L_repass" name="oldpass" required="" lay-verify="required" autocomplete="off" class="layui-input"></div>
+                            <input type="password" id="L_oldpass" name="oldpass" required="" lay-verify="required" autocomplete="off" class="layui-input"></div>
                     </div>
                     <div class="layui-form-item">
                         <label for="L_pass" class="layui-form-label">
@@ -44,41 +47,59 @@
                             <input type="password" id="L_repass" name="repass" required="" lay-verify="required" autocomplete="off" class="layui-input"></div>
                     </div>
                     <div class="layui-form-item">
-                        <label for="L_repass" class="layui-form-label"></label>
-                        <button class="layui-btn" lay-filter="save" lay-submit="">增加</button></div>
+                        <label  class="layui-form-label"></label>
+                        <button class="layui-btn" lay-filter="save" lay-submit="">修改</button></div>
                 </form>
             </div>
         </div>
-        <script>layui.use(['form', 'layer'],
+        <script>layui.use(['form', 'layer','jquery'],
             function() {
                 $ = layui.jquery;
                 var form = layui.form,
                 layer = layui.layer;
 
+                //自定义验证规则
+                form.verify({
+                    pass: [/(.+){6,12}$/, '密码必须6到12位'],
+                    repass: function(value) {
+                        if ($('#L_pass').val() != $('#L_repass').val()) {
+                            return '两次密码不一致';
+                        }
+                    }
+                });
+
                 //监听提交
                 form.on('submit(save)',
                 function(data) {
                     console.log(data);
-                    //发异步，把数据提交给php
-                    layer.alert("修改成功", {
-                        icon: 6
-                    },
-                    function() {
-                        // 获得frame索引
-                        var index = parent.layer.getFrameIndex(window.name);
-                        //关闭当前frame
-                        parent.layer.close(index);
+                    $.post('http://localhost:8080/memberpassword',{
+                        id:$('#L_id').val(),
+                        oldpass:$('#L_oldpass').val(),
+                        pass:$('#L_pass').val(),
+                    }).then(function (data) {
+                        //发异步，把数据提交给php
+                        var iconnumber = (data == '修改成功！')?6:5
+                        layer.alert(data, {
+                                icon: iconnumber
+                            },
+                            function() {
+                                // 获得frame索引
+                                var index = parent.layer.getFrameIndex(window.name);
+                                //关闭当前frame
+                                parent.layer.close(index);
+                            });
                     });
+
                     return false;
                 });
 
             });</script>
-        <script>var _hmt = _hmt || []; (function() {
+<!--        <script>var _hmt = _hmt || []; (function() {
                 var hm = document.createElement("script");
                 hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";
                 var s = document.getElementsByTagName("script")[0];
                 s.parentNode.insertBefore(hm, s);
-            })();</script>
+            })();</script>-->
     </body>
 
 </html>
